kubes/Deployment_node.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ssp-nodejs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ssp-nodejs
    spec:
      containers:
      - name: ssp-nodejs
        image: ssp25/ssp-nodejs-proj:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
