kubes/Service_node.yaml
apiVersion: v1
kind: Service
metadata:
  name: stupid-node
  labels:
    app: stupid-node
spec:
  selector:
    app: stupid-node
  ports:
  - port: 7070
    protocol: TCP
    nodePort: 7070
  type: LoadBalancer
